force-app/main/default/objects/Frame__c/Frame__c.object-meta.xml
<CustomObject>
    <label>Frame</label>
    <nameField>
        <label>Frame Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Frames</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>