force-app/main/default/objects/Frame__c/fields/Attempt_1__c.field-meta.xml
<CustomField>
    <fullName>Attempt_1__c</fullName>
    <label>Attempt 1</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>