force-app/main/default/objects/Frame__c/fields/Attempt_2__c.field-meta.xml
<CustomField>
    <fullName>Attempt_2__c</fullName>
    <label>Attempt 2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>