force-app/main/default/objects/Frame__c/fields/Frame__c.field-meta.xml
<CustomField>
    <fullName>Frame__c</fullName>
    <label>Frame</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>